@@ -6,6 +6,9 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 
 ## [Unreleased]
+### Fixed
+- [API_PARSER] [CISCO_UMBRELLA_MANAGED_ORG] Avoid errors and crashes when no logs are available for some customer IDs
+
 
 
 ## [2.21.0] - 2025-02-06
